HAWQ-1618. Segment panic at workfile_mgr_close_file() when transaction ROLLBACK