src/backend/utils/sort/tuplestorenew.c
@@ -191,6 +191,8 @@ struct NTupleStore
 	List *accessors;    /* all current accessors of the store */
 	bool fwacc; 		/* if I had already has a write acc */
 
+	MemoryContext mcxt; /* memory context holding this tuplestore, and the page structs */
+
 	/* instrumentation for explain analyze */
 	Instrumentation *instrument;
 };
@@ -383,21 +385,9 @@ static void nts_return_free_page(NTupleStore *nts, NTupleStorePage *page)
 	nts->first_free_page = NTS_PREPEND_1(nts->first_free_page, page);
 }
 
-static inline void *check_malloc(int size)
-{
-	void *ptr = gp_malloc(size);
-	if(!ptr)
-		ereport(ERROR,
-				(errcode(ERRCODE_OUT_OF_MEMORY),
-				 errmsg("NTupleStore failed to malloc: out of memory")));
-	return ptr;
-}
-
 /* Get a free page.  Will shrink if necessary.
  * The page returned still belong to the store (accounted by nts->page_cnt), but it is
  * not on any list.  Caller is responsible to put it back onto a list.
- *
- * Page is allocated/freed with gcc malloc/free, not palloc/pfree.
  */
 static NTupleStorePage *nts_get_free_page(NTupleStore *nts)
 {
@@ -464,7 +454,7 @@ static NTupleStorePage *nts_get_free_page(NTupleStore *nts)
 
 				if(nts->page_cnt >= page_max)
 				{
-					gp_free2(page_next, sizeof(NTupleStorePage));
+					pfree(page_next);
 					--nts->page_cnt;
 				}
 				else
@@ -486,7 +476,7 @@ static NTupleStorePage *nts_get_free_page(NTupleStore *nts)
 	}
 
 	Assert(page_next == NULL && nts->page_cnt < page_max);
-	page = (NTupleStorePage *) check_malloc(sizeof(NTupleStorePage));
+	page = (NTupleStorePage *) MemoryContextAlloc(nts->mcxt, sizeof(NTupleStorePage));
 	init_page(page);
 	++nts->page_cnt;
 
@@ -614,30 +604,24 @@ static NTupleStorePage *nts_load_prev_page(NTupleStore *store, NTupleStorePage *
 	}
 }
 
-static void ntuplestore_cleanup(NTupleStore *ts, bool fNormal, bool canReportError)
+void
+ntuplestore_destroy(NTupleStore *ts)
 {
 	NTupleStorePage *p = ts->first_page;
+	ListCell *cell;
 
-	/* normal case: for each accessor, we mark it has no owning store.
-	 * This do not need to, actually, cannot be called in error out case,
-	 * because the memory context of ts->accessor has already been 
-	 * cleaned up
-	 */
-	if(fNormal)
+	/* For each accessor, we mark it has no owning store. */
+	foreach(cell, ts->accessors)
 	{
-		ListCell *cell;
-		foreach(cell, ts->accessors)
-		{
-			NTupleStoreAccessor *acc = (NTupleStoreAccessor *) lfirst(cell);
-			acc->store = NULL;
-			acc->page = NULL;
-		}
+		NTupleStoreAccessor *acc = (NTupleStoreAccessor *) lfirst(cell);
+		acc->store = NULL;
+		acc->page = NULL;
 	}
 
 	while(p)
 	{
 		NTupleStorePage *pnext = nts_page_next(p); 
-		gp_free2(p, sizeof(NTupleStorePage));
+		pfree(p);
 		p = pnext;
 	}
 
@@ -645,18 +629,18 @@ static void ntuplestore_cleanup(NTupleStore *ts, bool fNormal, bool canReportErr
 	while(p)
 	{
 		NTupleStorePage *pnext = nts_page_next(p); 
-		gp_free2(p, sizeof(NTupleStorePage));
+		pfree(p);
 		p = pnext;
 	}
 
 	if(ts->pfile)
 	{
-		workfile_mgr_close_file(ts->work_set, ts->pfile, canReportError);
+		workfile_mgr_close_file(ts->work_set, ts->pfile, false);
 		ts->pfile = NULL;
 	}
 	if(ts->plobfile)
 	{
-		workfile_mgr_close_file(ts->work_set, ts->plobfile, canReportError);
+		workfile_mgr_close_file(ts->work_set, ts->plobfile, false);
 		ts->plobfile = NULL;
 	}
 
@@ -666,18 +650,14 @@ static void ntuplestore_cleanup(NTupleStore *ts, bool fNormal, bool canReportErr
 		ts->work_set = NULL;
 	}
 
-	gp_free2(ts, sizeof(NTupleStore));
-}
-
-static void XCallBack_NTS(XactEvent event, void *nts)
-{
-	ntuplestore_cleanup((NTupleStore *)nts, false, (event!=XACT_EVENT_ABORT));
+	pfree(ts);
 }
 
 NTupleStore *
 ntuplestore_create(int maxBytes)
 {
-	NTupleStore *store = (NTupleStore *) check_malloc(sizeof(NTupleStore));
+	NTupleStore *store = (NTupleStore *) palloc(sizeof(NTupleStore));
+	store->mcxt = CurrentMemoryContext;
 
 	store->pfile = NULL;
 	store->first_ondisk_blockn = 0;
@@ -696,7 +676,7 @@ ntuplestore_create(int maxBytes)
 	if(store->page_max < 16)
 		store->page_max = 16;
 
-	store->first_page = (NTupleStorePage *) check_malloc(sizeof(NTupleStorePage));
+	store->first_page = (NTupleStorePage *) MemoryContextAlloc(store->mcxt, sizeof(NTupleStorePage));
 	init_page(store->first_page);
 	nts_page_set_blockn(store->first_page, 0);
 
@@ -715,7 +695,6 @@ ntuplestore_create(int maxBytes)
 
 	store->instrument = NULL;
 
-	RegisterXactCallbackOnce(XCallBack_NTS, (void *) store);
 	return store;
 }
 
@@ -749,7 +728,8 @@ ntuplestore_create_readerwriter(const char *filename, int maxBytes, bool isWrite
 	}
 	else
 	{
-		store = (NTupleStore *) check_malloc(sizeof(NTupleStore));
+		store = (NTupleStore *) palloc(sizeof(NTupleStore));
+		store->mcxt = CurrentMemoryContext;
 		store->work_set = NULL;
 		store->cached_workfiles_found = false;
 		store->cached_workfiles_loaded = false;
@@ -764,7 +744,6 @@ ntuplestore_create_readerwriter(const char *filename, int maxBytes, bool isWrite
 				0 /* compressType */);
 
 		ntuplestore_init_reader(store, maxBytes);
-		RegisterXactCallbackOnce(XCallBack_NTS, (void *) store);
 	}
 	return store;
 }
@@ -791,7 +770,7 @@ ntuplestore_init_reader(NTupleStore *store, int maxBytes)
 	if(store->page_max < 16)
 		store->page_max = 16;
 
-	store->first_page = (NTupleStorePage *) check_malloc(sizeof(NTupleStorePage));
+	store->first_page = (NTupleStorePage *) MemoryContextAlloc(store->mcxt, sizeof(NTupleStorePage));
 	init_page(store->first_page);
 
 	bool fOK = ntsReadBlock(store, 0, store->first_page);
@@ -923,17 +902,19 @@ ntuplestore_flush(NTupleStore *ts)
 	}
 }
 
-void 
-ntuplestore_destroy(NTupleStore *ts)
-{
-	UnregisterXactCallbackOnce(XCallBack_NTS, (void *) ts);
-	ntuplestore_cleanup(ts, true, true);
-}
-
 NTupleStoreAccessor* 
 ntuplestore_create_accessor(NTupleStore *ts, bool isWriter)
 {
-	NTupleStoreAccessor *acc = (NTupleStoreAccessor *) palloc(sizeof(NTupleStoreAccessor));
+	NTupleStoreAccessor *acc;
+	MemoryContext oldcxt;
+
+	/*
+	 * The accessor is allocated in the same memory context as the tuplestore
+	 * itself.
+	 */
+	oldcxt = MemoryContextSwitchTo(ts->mcxt);
+
+	acc = (NTupleStoreAccessor *) palloc(sizeof(NTupleStoreAccessor));
 
 	acc->store = ts;
 	acc->isWriter = isWriter;
@@ -951,6 +932,8 @@ ntuplestore_create_accessor(NTupleStore *ts, bool isWriter)
 	AssertImply(isWriter, !ts->fwacc);
 	if(isWriter)
 		ts->fwacc = true;
+
+	MemoryContextSwitchTo(oldcxt);
 
 	return acc;
 }
@@ -1338,6 +1321,7 @@ bool ntuplestore_acc_current_tupleslot(NTupleStoreAccessor *tsa, TupleTableSlot 
 	{
 		NTupleStoreLobRef *plobref = (NTupleStoreLobRef *) tuple;
 		Assert(len == -(int)sizeof(NTupleStoreLobRef));
+
 		
 		tuple = (MemTuple) palloc(plobref->size);
 		len = ntuplestore_get_lob(tsa->store, tuple, plobref);
@@ -1370,7 +1354,7 @@ bool ntuplestore_acc_current_data(NTupleStoreAccessor *tsa, void **data, int *le
 		{
 			if (tsa->tmp_lob)
 				pfree(tsa->tmp_lob);
-			tsa->tmp_lob = palloc(plobref->size);
+			tsa->tmp_lob = MemoryContextAlloc(tsa->store->mcxt, plobref->size);
 			tsa->tmp_len = plobref->size;
 		}
 
